--- a/ops/clusters/warehouse/production-apps.yaml
+++ b/ops/clusters/warehouse/production-apps.yaml
@@ -2,7 +2,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: apps
+  name: production-apps
   namespace: flux-system
 spec:
   interval: 1h
