Setup deps for k8s resources

--- a/ops/clusters/warehouse/production-apps.yaml
+++ b/ops/clusters/warehouse/production-apps.yaml
@@ -5,6 +5,8 @@ metadata:
   name: production-apps
   namespace: flux-system
 spec:
+  dependsOn:
+    - name: infrastructure-controllers
   interval: 1h
   retryInterval: 1m
   timeout: 5m
