Add cloudsql proxy operator

--- a/ops/k8s-apps/production/kustomization.yaml
+++ b/ops/k8s-apps/production/kustomization.yaml
@@ -7,3 +7,6 @@ patches:
   - path: ./custom-helm-values.yaml
     target:
       type: HelmRelease
+  - path: ./init-container.yaml
+    target:
+      type: Deployment
