Fix service accounts

--- a/ops/k8s-apps/production/custom-helm-values.yaml
+++ b/ops/k8s-apps/production/custom-helm-values.yaml
@@ -6,3 +6,8 @@ spec:
   values:
     configMap:
       secretPrefix: "gcp:secretmanager:production-dagster"
+    dagster:
+      global: 
+        serviceAccountName: production-dagster
+    global:
+      serviceAccountName: production-dagster
