Fix dagster serviceaccount

--- a/ops/k8s-apps/base/dagster/dagster.yaml
+++ b/ops/k8s-apps/base/dagster/dagster.yaml
@@ -25,6 +25,8 @@ spec:
     remediation:
       retries: 3
   values:
+    global:
+      serviceAccountName: base-dagster
     dagster:
       ingress:
         enabled: true
