Update init container setup

--- a/ops/k8s-apps/production/webserver-init-container.yaml
+++ b/ops/k8s-apps/production/webserver-init-container.yaml
@@ -1,8 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  labels:
-    app.kubernetes.io/name: dagster
+  name: production-dagster-dagster
 spec:
   template:
     spec:
