--- a/ops/k8s-apps/production/kustomization.yaml
+++ b/ops/k8s-apps/production/kustomization.yaml
@@ -8,7 +8,8 @@ patches:
     target:
       type: HelmRelease
 patchesStrategicMerge:
-  - ./init-container.yaml
+  - ./daemon-init-container.yaml
+  - ./webserver-init-container.yaml
 patchesJson6902:
   - target:
       kind: Namespace
