--- a/ops/k8s-apps/production/daemon-init-container.yaml
+++ b/ops/k8s-apps/production/daemon-init-container.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: dagster-daemon
+  name: production-dagster-daemon
 spec:
   template:
     spec:
