--- a/ops/k8s-apps/production/webserver-init-container.yaml
+++ b/ops/k8s-apps/production/webserver-init-container.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: dagster-dagit
+  namespace: production-dagster
 spec:
   template:
     spec:
