Attempt different config strategy for prod apps

--- a/ops/k8s-apps/base/dagster/kustomization.yaml
+++ b/ops/k8s-apps/base/dagster/kustomization.yaml
@@ -4,3 +4,6 @@ namespace: base-dagster
 resources:
   - dagster.yaml
   - proxy.yaml
+patchesStrategicMerge:
+  - ./daemon-init-container.yaml
+  - ./webserver-init-container.yaml
