--- a/ops/k8s-apps/base/dagster/daemon-init-container.yaml
+++ b/ops/k8s-apps/base/dagster/daemon-init-container.yaml
@@ -1,8 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: dagster-dagit
-  namespace: production-dagster
+  name: dagster-daemon
 spec:
   template:
     spec:
