Set dagster release name

--- a/ops/k8s-apps/base/dagster/dagster.yaml
+++ b/ops/k8s-apps/base/dagster/dagster.yaml
@@ -13,6 +13,7 @@ metadata:
   name: dagster
   namespace: base-dagster
 spec:
+  releaseName: dagster
   chart:
     spec:
       chart: ./ops/helm-charts/oso-dagster
