Another config test

--- a/ops/helm-charts/oso-dagster/values.yaml
+++ b/ops/helm-charts/oso-dagster/values.yaml
@@ -9,6 +9,7 @@ dagster:
     enabled: false
     postgresqlPassword: "gcp:secretmanager:dagster-db-password/versions/1"
   enableReadOnly: true
+  nameOverride: "dagster"
 
   dagsterWebserver:
     env:
