Another config test

--- a/ops/k8s-apps/base/dagster/dagster.yaml
+++ b/ops/k8s-apps/base/dagster/dagster.yaml
@@ -28,6 +28,7 @@ spec:
     global:
       serviceAccountName: base-dagster
     dagster:
+      nameOverride: "dagster"
       ingress:
         enabled: true
         ingressClassName: ingress-internal-cloudflare
