Another config test

--- a/ops/k8s-apps/base/dagster/kustomization.yaml
+++ b/ops/k8s-apps/base/dagster/kustomization.yaml
@@ -4,6 +4,6 @@ namespace: base-dagster
 resources:
   - dagster.yaml
   - proxy.yaml
-patchesStrategicMerge:
-  - ./daemon-init-container.yaml
-  - ./webserver-init-container.yaml
+# patchesStrategicMerge:
+#   - ./daemon-init-container.yaml
+#   - ./webserver-init-container.yaml
