Use postrenderers on the helmrelease

--- a/ops/k8s-apps/base/dagster/dagster.yaml
+++ b/ops/k8s-apps/base/dagster/dagster.yaml
@@ -42,3 +42,12 @@ spec:
       dagsterDaemon:
         envConfigMaps:
           - name: dagster-oso-extra-env
+  postRenderers:
+    - kustomize:
+        patches:
+          - path: ./daemon-init-container.yaml
+            target:
+              kind: Deployment
+          - path: ./webserver-init-container.yaml
+            target:
+              kind: Deployment
