--- a/ops/k8s-apps/base/dagster/kustomization.yaml
+++ b/ops/k8s-apps/base/dagster/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 namespace: base-dagster
 resources:
   - dagster.yaml
-#   - proxy.yaml
+  - proxy.yaml
 # patchesStrategicMerge:
 #   - ./daemon-init-container.yaml
 #   - ./webserver-init-container.yaml
