Fix post rendererers

--- a/ops/k8s-apps/base/dagster/dagster.yaml
+++ b/ops/k8s-apps/base/dagster/dagster.yaml
@@ -48,6 +48,8 @@ spec:
           - path: ./daemon-init-container.yaml
             target:
               kind: Deployment
+              name: dagster-daemon
           - path: ./webserver-init-container.yaml
             target:
               kind: Deployment
+              name: dagster-dagit
