--- a/ops/k8s-apps/production/custom-helm-values.yaml
+++ b/ops/k8s-apps/production/custom-helm-values.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   values:
     global:
-      serviceAccountName: base-dagster
+      serviceAccountName: production-dagster
     configMap:
       secretPrefix: "gcp:secretmanager:production-dagster"
     dagster:
