ravenac95/basic dagster deployment (#1435)
* Run proxy first

* Updates for docker builds

* Moving files around

* move cloudquery images

* Create a general container build/publisher

* Re-enable main

--- a/ops/helm-charts/oso-dagster/templates/config-map.yaml
+++ b/ops/helm-charts/oso-dagster/templates/config-map.yaml
@@ -1,7 +1,9 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ .Release.Name }}-oso-extra-env
+  name: dagster-oso-extra-env
 data:
-  DAGSTER_PG_USER: {{ .Values.configMap.secretPrefix }}-{{ .Values.secretmanagerKeys.dbUser }}
-  DAGSTER_PG_DB_NAME: {{ .Values.configMap.secretPrefix }}-{{ .Values.secretmanagerKeys.dbName }}
+  DAGSTER_PG_USER: "{{ .Values.configMap.secretPrefix }}-{{ .Values.secretmanagerKeys.dbUser }}"
+  DAGSTER_PG_DB_NAME: "{{ .Values.configMap.secretPrefix }}-{{ .Values.secretmanagerKeys.dbName }}"
+  DAGSTER_PG_PORT: "{{ .Values.pg.port }}"
+  DAGSTER_PG_HOST: "{{ .Values.pg.host }}"
