--- a/ops/k8s-apps/base/dagster/proxy-for-deployments.yaml
+++ b/ops/k8s-apps/base/dagster/proxy-for-deployments.yaml
@@ -1,16 +1,18 @@
 apiVersion: cloudsql.cloud.google.com/v1
 kind: AuthProxyWorkload
 metadata:
-  name: dagster-auth-proxy
+  name: dagster-deployment-cloudsql-proxy
 spec:
   authProxyContainer:
     resources:
       requests:
-        cpu: "1"
-        memory: "500Mi"
+        cpu: "50m"
+        memory: "64Mi"
   workloadSelector:
     kind: "Deployment" # Applies to a "Deployment"
-    name: dagster-daemon
+    selector:
+      matchLabels:
+        app.kubernetes.io/name: dagster
   instances:
     - connectionString: "opensource-observer:us-central1:oso-psql"
       portEnvName: "DAGSTER_PG_PORT"
