--- a/ops/clusters/warehouse/production-apps.yaml
+++ b/ops/clusters/warehouse/production-apps.yaml
@@ -14,5 +14,6 @@ spec:
     kind: GitRepository
     name: flux-system
   path: ./ops/k8s-apps/production
+  force: true
   prune: true
   wait: true
