--- a/ops/helm-charts/oso-dagster/values.yaml
+++ b/ops/helm-charts/oso-dagster/values.yaml
@@ -10,19 +10,6 @@ dagster:
     postgresqlPassword: "gcp:secretmanager:dagster-db-password/versions/1"
   enableReadOnly: true
 
-  dagsterWebserver:
-    env:
-      - name: DAGSTER_PG_HOST
-        value: set-by-proxy-operator
-      - name: DAGSTER_PG_PORT
-        value: set-by-proxy-operator
-
-  dagsterDaemon:
-    env:
-      - name: DAGSTER_PG_HOST
-        value: set-by-proxy-operator
-      - name: DAGSTER_PG_PORT
-        value: set-by-proxy-operator
 configMap:
   name: "dagster-extra-env-config-map"
   secretPrefix: "gcp:secretmanager:dagster"
@@ -31,3 +18,6 @@ secretmanagerKeys:
   dbHost: "db-host/versions/1"
   dbPort: "db-port/versions/1"
   dbName: "db-name/versions/1"
+pg:
+  port: "5432"
+  host: "127.0.0.1"
