--- a/ops/k8s-apps/base/dagster/kustomization.yaml
+++ b/ops/k8s-apps/base/dagster/kustomization.yaml
@@ -2,8 +2,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: base-dagster
 resources:
+  #- proxy-for-deployments.yaml
+  #- proxy-for-jobs.yaml
   - dagster.yaml
-  - proxy.yaml
 # patchesStrategicMerge:
 #   - ./daemon-init-container.yaml
 #   - ./webserver-init-container.yaml
