ravenac95/dagster deployment working (#1439)
* Re-enable test

* test

* test

* test

* test

* test

* test

* test

* test

* test

* test

* test

* test

* test

--- a/.github/workflows/warehouse-publish-docker-containers.yml
+++ b/.github/workflows/warehouse-publish-docker-containers.yml
@@ -35,6 +35,6 @@ jobs:
       - name: Package and publish cloudquery plugins
         run: bash .github/scripts/publish-cloudquery-plugins.sh
 
-      # - name: Package and publish other docker containers
-      #   run: bash .github/scripts/publish-docker-containers-plugins.sh
+      - name: Package and publish other docker containers
+        run: bash .github/scripts/publish-docker-containers.sh
         
