--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,8 @@ dask = { extras = ["distributed"], version = "^2024.4.2" }
 lz4 = "^4.3.3"
 arrow = "^1.3.0"
 polars = "^0.20.23"
+requests = "^2.31.0"
+dagster-postgres = "^0.23.6"
 
 
 [tool.poetry.scripts]
