Add condition to staging env preparation workflow
Signed-off-by: Wei-Chun, Chang <wcchang@infuseai.io>

--- a/.github/workflows/recce-staging-daily.yml
+++ b/.github/workflows/recce-staging-daily.yml
@@ -22,6 +22,7 @@ env:
 jobs:
   prepare-recce-staging-env:
     name: Prepare Recce staging env
+    if: github.event.pull_request.merged == true || github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
