[Fix] Change to use github_codespace_env.sh to download artifacts
Signed-off-by: Kent Huang <kent@infuseai.io>

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -25,6 +25,6 @@
             "onAutoForward": "openBrowser"
         }
     },
-    "postStartCommand": "echo 'DevContainer is ready!'; bash .devcontainer/post_start_command.sh"
+    "postStartCommand": "echo 'Running the Post Start Task!'; bash .devcontainer/post_start_command.sh"
 
 }
