--- a/.github/workflows/recce-prsync.yml
+++ b/.github/workflows/recce-prsync.yml
@@ -8,6 +8,29 @@ on:
     - cron: '30 17 * * *' # run at 1:30 AM (UTC + 8) everyday
 
 jobs:
+  sync-upstream:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout the repo
+      uses: actions/checkout@v3
+      with:
+        ref: dev
+
+    - name: Add Upstream remote
+      run: git remote add upstream https://github.com/opensource-observer/oso.git
+
+    - name: Fetch Upstream
+      run: git fetch upstream
+
+    - name: Rebase from Upstream
+      run: git rebase upstream/main
+
+    - name: Push changes
+      run: |
+        git config --global user.name 'github-actions[bot]'
+        git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+        git push origin dev
   prsync:
     runs-on: ubuntu-latest
 
