Update devcontainer, change to use the recce server in the cloud mode
Signed-off-by: popcorny <celu@infuseai.io>

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,30 +1,13 @@
 {
     "name": "Recce CodeSpace",
-    "image": "infuseai/oso-dev-container:3.11",
+    "build": {
+        "dockerfile": "Dockerfile",
+    },
     "containerEnv": {
         "DBT_GOOGLE_PROJECT": "infuseai-dev",
         "DBT_GOOGLE_DATASET": "oso_playground",
         "DBT_GOOGLE_DEV_DATASET": "oso_playground_dev",
         "DBT_GOOGLE_KEYFILE": "/home/vscode/.config/gcloud/google-service-account.json",
-        "RECCE_CI_WORKFLOW_NAME": "OSO Recce CI",
-        "RECCE_DAILY_CI_WORKFLOW_NAME": "OSO Recce Staging CI"
     },
-    "customizations": {
-        "vscode": {
-            "settings": {
-                "terminal.integrated.shell.linux": "/bin/bash",
-                "python.terminal.activateEnvironment": true
-            }
-        },
-        "extensions": []
-        },
-    "forwardPorts": [8000],
-    "portsAttributes": {
-        "8000": {
-            "label": "Recce Server",
-            "onAutoForward": "openBrowser"
-        }
-    },
-    "postStartCommand": "echo 'Running the Post Start Task!'; bash .devcontainer/post_start_command.sh"
-
+    "postStartCommand": "mkdir -p /home/vscode/.config/gcloud && printenv GOOGLE_CLOUD_SERVICE_ACCOUNT_KEY_CONTENT > ${DBT_GOOGLE_KEYFILE} && recce server --cloud --review"
 }
