--- a/.github/workflows/recce-ci.yml
+++ b/.github/workflows/recce-ci.yml
@@ -68,6 +68,8 @@ jobs:
 
       - name: Run Recce CI
         run: poetry run recce run --cloud --cloud-token ${{ secrets.RECCE_CLOUD_TOKEN }}
+        env:
+          RECCE_STATE_PASSWORD: ${{ vars.RECCE_STATE_PASSWORD }}
 
       - name: Prepare Recce Summary
         id: recce-summary
@@ -87,6 +89,7 @@ jobs:
 
         env:
           ARTIFACT_URL: ${{ steps.recce-artifact-uploader.outputs.artifact-url }}
+          RECCE_STATE_PASSWORD: ${{ vars.RECCE_STATE_PASSWORD }}
           NEXT_STEP_MESSAGE: |
             ## Next Steps          
             If you want to check more detail information about the recce result, please follow this instruction
@@ -96,7 +99,7 @@ jobs:
             git checkout ${{ github.event.pull_request.head.ref }}
 
             # Launch the recce server based on the state file
-            recce server --review --cloud
+            recce server --review --cloud --password ${{ vars.RECCE_STATE_PASSWORD }}
 
             # Open the recce server http://localhost:8000 by your browser
             ```
